// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Publication test renders a DatePublication component with content 1`] = `
<Text
  accessibilityLabel="datePublication"
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      },
      Object {},
    ]
  }
  testID="datePublication"
>
  Saturday July 01 2017
  , The Times
</Text>
`;

exports[`Date Publication test renders a DatePublication component with red font color 1`] = `
<Text
  accessibilityLabel="datePublication"
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      },
      Object {
        "color": "red",
      },
    ]
  }
  testID="datePublication"
>
  Saturday July 01 2017
  , The Times
</Text>
`;
